--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         'float': 'float 6s ease-in-out infinite',
                         'shimmer': 'shimmer 2s linear infinite',
                         'spin-slow': 'spin 8s linear infinite',
+                        'fade-in': 'fadeIn 0.3s ease-out forwards',
                     },
                     keyframes: {
                         float: {
@@ -52,6 +53,10 @@
                         shimmer: {
                             '0%': { backgroundPosition: '-200% 0' },
                             '100%': { backgroundPosition: '200% 0' },
+                        },
+                        fadeIn: {
+                            '0%': { opacity: '0', transform: 'translate(-50%, -40%)' },
+                            '100%': { opacity: '1', transform: 'translate(-50%, -50%)' },
                         }
                     }
                 },
