--- a/client/index.html
+++ b/client/index.html
@@ -106,6 +106,6 @@
 </head>
 <body class="bg-background-dark font-display text-white selection:bg-primary selection:text-white">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
